--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port:8081
 #mysql data configurations
 
 spring.datasource.url=jdbc:mysql://localhost:3306/scm20
-spring.datasource.username=root
-spring.datasource.password=Vaidik@2005
+spring.datasource.username=**
+spring.datasource.password=**
 
 #jpa configurations
 spring.jpa.show-sql=true
